--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
   "name": "urlshortener",
-  "packageManager": "yarn@4.0.2"
+  "author": "ElitistNoob",
+  "version": "1.0.0",
+  "description": "",
+  "license": "MIT",
+  "packageManager": "yarn@4.0.2",
+  "devDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
