--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "commonjs": true,
         "es2021": true
     },
-    "extends": ["plugin", "airbnb-base"],
+    "extends": ["prettier", "airbnb-base"],
     "plugins": ["prettier"],
     "parserOptions": {
         "ecmaVersion": "latest"
