--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "",
   "license": "MIT",
   "packageManager": "yarn@4.0.2",
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
