--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+node_modules
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+.idea/*
+!.idea/codeStyles
+!.idea/jsLibraryMappings.xml
+!.idea/urlshortener.iml
 
 # Swap the comments on the following lines if you wish to use zero-installs
 # In that case, don't forget to run `yarn config set enableGlobalCache false`!
@@ -11,3 +16,6 @@
 
 #!.yarn/cache
 .pnp.*
+.yarnrc.yml
+!/.env
+!/yarn.lock
