--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 node_modules
+.yarn
 .yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+.yarn/patches
+.yarn/plugins
+.yarn/releases
+.yarn/sdks
+.yarn/versions
+.idea
 .idea/*
 .idea/codeStyles
 .idea/jsLibraryMappings.xml
