--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 node_modules
-
 .yarn/*
-.yarn/patches
-.yarn/plugins
-.yarn/releases
-.yarn/sdks
-.yarn/versions
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .idea
 .idea/*
 .idea/codeStyles
